@@ -94,7 +94,7 @@ name|facet
 operator|.
 name|taxonomy
 operator|.
-name|TaxonomyReader
+name|ParallelTaxonomyArrays
 import|;
 end_import
 
@@ -110,9 +110,7 @@ name|facet
 operator|.
 name|taxonomy
 operator|.
-name|directory
-operator|.
-name|ParallelTaxonomyArrays
+name|TaxonomyReader
 import|;
 end_import
 
