@@ -224,7 +224,7 @@ name|facet
 operator|.
 name|taxonomy
 operator|.
-name|TaxonomyReader
+name|ParallelTaxonomyArrays
 import|;
 end_import
 
@@ -240,9 +240,7 @@ name|facet
 operator|.
 name|taxonomy
 operator|.
-name|directory
-operator|.
-name|ParallelTaxonomyArrays
+name|TaxonomyReader
 import|;
 end_import
 
