@@ -78,7 +78,7 @@ name|facet
 operator|.
 name|taxonomy
 operator|.
-name|TaxonomyReader
+name|ParallelTaxonomyArrays
 import|;
 end_import
 
@@ -94,9 +94,7 @@ name|facet
 operator|.
 name|taxonomy
 operator|.
-name|directory
-operator|.
-name|ParallelTaxonomyArrays
+name|TaxonomyReader
 import|;
 end_import
 
