@@ -138,7 +138,7 @@ name|facet
 operator|.
 name|taxonomy
 operator|.
-name|TaxonomyReader
+name|ParallelTaxonomyArrays
 import|;
 end_import
 
@@ -154,9 +154,7 @@ name|facet
 operator|.
 name|taxonomy
 operator|.
-name|directory
-operator|.
-name|ParallelTaxonomyArrays
+name|TaxonomyReader
 import|;
 end_import
 
