@@ -76,6 +76,22 @@ name|facet
 operator|.
 name|taxonomy
 operator|.
+name|ParallelTaxonomyArrays
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|facet
+operator|.
+name|taxonomy
+operator|.
 name|TaxonomyReader
 import|;
 end_import
@@ -95,24 +111,6 @@ operator|.
 name|directory
 operator|.
 name|DirectoryTaxonomyReader
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|facet
-operator|.
-name|taxonomy
-operator|.
-name|directory
-operator|.
-name|ParallelTaxonomyArrays
 import|;
 end_import
 
