@@ -150,24 +150,6 @@ name|apache
 operator|.
 name|lucene
 operator|.
-name|facet
-operator|.
-name|taxonomy
-operator|.
-name|directory
-operator|.
-name|ParallelTaxonomyArrays
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
 name|store
 operator|.
 name|Directory
